--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpileOnly src/server.ts",
+    "dev": "ts-node src/server.ts",
     "biuld": "tsc",
     "start": "node dist/server.js",
     "lint:check": "prettier --check .",
