--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "js2xmlparser": "^5.0.0",
+    "protobufjs": "^7.5.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "jest": "^30.2.0",
