--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.19.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "js2xmlparser": "^5.0.0",
@@ -27,6 +28,7 @@
     "@types/node": "^24.10.1",
     "jest": "^30.2.0",
     "prettier": "^3.6.2",
+    "prisma": "^6.19.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
